# tech-route-maker

./: .aider.conf.yml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  pyproject.toml  setup.py
.cursor/rules/: tech-route-maker.mdc
.gemini/: settings.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: validate.yml
agents/: openai.yaml
docs/: agent-compatibility.md  baseline-check.md  faq.md  index.md  installation.md  output-formats.md  quickstart.md  release-checklist.md  release-notes-v0.2.0.md  schema-migration-v0.2.md  schema.md
examples/: README.md  sample-tech-route.json
examples/academic-paper-demo/: brief.md  demo-walkthrough.en.md  demo-walkthrough.md  demo-walkthrough.zh-CN.md
examples/agent-workflow-demo/: brief.md
examples/engineering-energy-system-demo/: brief.md
examples/legacy-campaign-route-demo/: brief.md
examples/thesis-proposal-demo/: brief.md
references/: github-projects.md  layout-patterns.md  output-options.md  paper-framework-integration.md  route-schema.md  visual-styles.md
scripts/: build_v02_demos.py  refresh_demo_assets.py  render_all.py  render_drawio.py  render_excalidraw.py  render_html.py  render_markdown.py  render_mermaid.py  render_pptx.py  render_svg.py  route_common.py  validate_route.py
tech_route_maker/: __init__.py  cli.py  quality.py  schema.py  validator.py
(+53 files in other folders)
